﻿Improved exception handling for deserialization errors. These exceptions will now include the raw JSON response from the API to make reporting issues easier.