@@ -35,14 +35,14 @@ This project provides a C# client for the [Nordigen API](https://www.nordigen.co
    The responses that are returned always have the same structure:
 
    ```cs
-   // If the response is successful the Result will not be null (the Error will be null)
+   // If the request was successful response.Result will contain the returned data (the Error will be null)
    if(response.IsSuccess){
-      var institutions = response.Result!;
+      var institutions = response.Result;
       institutions.ForEach(institution => Console.WriteLine(institution.Name));
    }
-   // If the response is not successful the Error will not be null (the Result will be null)
+   // If the request was not successful response.Error will contain the reason it failed (the Result will be null)
    else
-      Console.WriteLine(response.Error!.Summary);
+      Console.WriteLine(response.Error.Summary);
    ```
 
 ## Getting balances and transactions for a bank account
@@ -51,81 +51,81 @@ Here is how you would go about retrieving the balances and transactions for a ba
 
 1. Get a list of institutions in your country (e.g. Great Britain):
 
-   ```cs
-   var institutionsResponse = await client.InstitutionsEndpoint.GetInstitutions(country: "GB");
-   if(institutionsResponse.IsSuccess)
-      institutionsResponse.Result!.ForEach(institution =>
-      {
-          Console.WriteLine($"Institution: {institution.Name}, Id: {institution.Id}");
-      });
-   else
-      Console.WriteLine($"Couldn't retrieve institutions, error: {institutionsResponse.Error!.Summary}");
-   ```
+    ```cs
+    var institutionsResponse = await client.InstitutionsEndpoint.GetInstitutions(country: "GB");
+    if (institutionsResponse.IsSuccess)
+        institutionsResponse.Result.ForEach(institution =>
+        {
+            Console.WriteLine($"Institution: {institution.Name}, Id: {institution.Id}");
+        });
+    else
+        Console.WriteLine($"Couldn't retrieve institutions, error: {institutionsResponse.Error.Summary}");
+    ```
 
 2. Choose the institution your bank account is registered with and create a requisition for it:
 
-   ```cs
-   var institution = "BANK_OF_SCOTLAND_BOFSGBS1";
-   var userLanguage = "EN";
-   var reference = "your-internal-reference";
-   var redirect = new Uri("https://where-nordigen-will-redirect-after-authentication.com");
-   var requisitionRequest = new CreateRequisitionRequest(redirect, institution, reference, userLanguage);
-   var requisitionResponse = await client.RequisitionsEndpoint.CreateRequisition(requisitionRequest);
+    ```cs
+    var institution = "BANK_OF_SCOTLAND_BOFSGBS1";
+    var userLanguage = "EN";
+    var reference = "your-internal-reference";
+    var redirect = new Uri("https://where-nordigen-will-redirect-after-authentication.com");
+    var requisitionRequest = new CreateRequisitionRequest(redirect, institution, reference, userLanguage);
+    var requisitionResponse = await client.RequisitionsEndpoint.CreateRequisition(requisitionRequest);
 
     if (requisitionResponse.IsSuccess)
     {
-        Console.WriteLine($"Requisition id: {requisitionResponse.Result!.Id}");
-        Console.WriteLine($"Start authentication: {requisitionResponse.Result!.AuthenticationLink}");
+        Console.WriteLine($"Requisition id: {requisitionResponse.Result.Id}");
+        Console.WriteLine($"Start authentication: {requisitionResponse.Result.AuthenticationLink}");
     }
 
     else
-        Console.WriteLine($"Requisition couldn't be created: {requisitionResponse.Error!.Summary}");
-   ```
+        Console.WriteLine($"Requisition couldn't be created: {requisitionResponse.Error.Summary}");
+    ```
 
 3. You will now need to accept the end user agreement by following the authentication link. After that you will be able to retrieve the accounts linked to your bank account:
 
-   ```cs
-   var requisitionId = "your-requisition-id";
-   var accountsResponse = await client.RequisitionsEndpoint.GetRequisition(requisitionId);
-   if(accountsResponse.IsSuccess)
-       accountsResponse.Result!.Accounts.ForEach(accountId =>
-       {
+    ```cs
+    var requisitionId = "your-requisition-id";
+    var accountsResponse = await client.RequisitionsEndpoint.GetRequisition(requisitionId);
+    if (accountsResponse.IsSuccess)
+        accountsResponse.Result.Accounts.ForEach(accountId =>
+        {
             Console.WriteLine($"Account id: {accountId}");
-       });
-   else
-       Console.WriteLine($"Accounts couldn't be retrieved: {accountsResponse.Error!.Summary}");
-   ```
+        });
+    else
+        Console.WriteLine($"Accounts couldn't be retrieved: {accountsResponse.Error.Summary}");
+    ```
 
 4. Now you can retrieve details about the bank account and the balances/transactions:
 
-   ```cs
-   var accountId = "your-account-id";
-   var bankAccountDetailsResponse = await client.AccountsEndpoint.GetAccountDetails(accountId);
-   if(bankAccountDetailsResponse.IsSuccess)
-   {
-        Console.WriteLine($"IBAN: {bankAccountDetailsResponse.Result!.Iban}");
-        Console.WriteLine($"Account name: {bankAccountDetailsResponse.Result!.Name}");
-   }
+    ```cs
+    var accountId = "your-account-id";
+    var bankAccountDetailsResponse = await client.AccountsEndpoint.GetAccountDetails(accountId);
+    if (bankAccountDetailsResponse.IsSuccess)
+    {
+        Console.WriteLine($"IBAN: {bankAccountDetailsResponse.Result.Iban}");
+        Console.WriteLine($"Account name: {bankAccountDetailsResponse.Result.Name}");
+    }
 
-   var balancesResponse = await client.AccountsEndpoint.GetBalances(accountId);
-   if(balancesResponse.IsSuccess)
-       balancesResponse.Result!.ForEach(balance =>
-       {
-           var balanceAmount = balance.BalanceAmount;
-           Console.WriteLine($"Type: {balance.BalanceType}");
-           Console.WriteLine($"Balance: {balanceAmount.AmountParsed} {balanceAmount.Currency}");
-       });
+    var balancesResponse = await client.AccountsEndpoint.GetBalances(accountId);
+    if (balancesResponse.IsSuccess)
+        balancesResponse.Result.ForEach(balance =>
+        {
+            var balanceAmount = balance.BalanceAmount;
+            Console.WriteLine($"Type: {balance.BalanceType}");
+            Console.WriteLine($"Balance: {balanceAmount.AmountParsed} {balanceAmount.Currency}");
+        });
 
-   var transactionsResponse = await client.AccountsEndpoint.GetTransactions(accountId);
-   if (transactionsResponse.IsSuccess)
-       transactionsResponse.Result!.BookedTransactions.ForEach(transaction =>
-       {
-           var transactionAmount = transaction.TransactionAmount;
-           Console.WriteLine($"Remittance: {transaction.RemittanceInformationUnstructured}");
-           Console.WriteLine($"Booking date:{transaction.ValueDate}");
-           Console.WriteLine($"Amount: {transactionAmount.AmountParsed} {transactionAmount.Currency}");
-       });
-   ```
+    var transactionsResponse = await client.AccountsEndpoint.GetTransactions(accountId);
+    if (transactionsResponse.IsSuccess)
+        transactionsResponse.Result.BookedTransactions.ForEach(transaction =>
+        {
+            var transactionAmount = transaction.TransactionAmount;
+            Console.WriteLine($"Remittance: {transaction.RemittanceInformationUnstructured}");
+            Console.WriteLine($"Booking date:{transaction.ValueDate}");
+            Console.WriteLine($"Amount: {transactionAmount.AmountParsed} {transactionAmount.Currency}");
+        });
+    ```
 
 ## Advanced Usage
 
@@ -155,13 +155,15 @@ Alternatively you can also use the tokens endpoint directly:
 var response = await client.TokenEndpoint.GetTokenPair();
 if (response.IsSuccess)
 {
-    Console.WriteLine($"Access token: {response.Result!.AccessToken.EncodedToken}");
-    Console.WriteLine($"Refresh token: {response.Result!.RefreshToken.EncodedToken}");
+    Console.WriteLine($"Access token: {response.Result.AccessToken.EncodedToken}");
+    Console.WriteLine($"Refresh token: {response.Result.RefreshToken.EncodedToken}");
 }
 
 // Set the token pair on the client
 client.JsonWebTokenPair = response.Result;
 ```
+
+### Getting notified when the Access/Refresh Token is updated
 
 To get notified whenever the token pair is updated you can subscribe to the ```TokenPairUpdated``` event:
 
